fix: fixed error message overlapping with url results

--- a/frontend/src/Components/ErrorMessage/ErrorMessage.css
+++ b/frontend/src/Components/ErrorMessage/ErrorMessage.css
@@ -5,8 +5,9 @@
   padding: 0 !important;
   font-size: 1.5rem;
   border-radius: 20px;
-  transition: opacity 300ms, height 300ms, z-index 100ms 300ms;
+  transition: all 300ms ease-in-out;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 
 #output-error.visible {
